--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
         <label for="4">ONLINE SUNDAY SCHOOL FORM 2024 (OKOPEDI ASSEMBLY)</label>
         <label for="1"><br>
 
-            
+
             <input id="1" type="text" placeholder="Enter Your First Name">
            </label>
            <input id="1" type="text" placeholder="Enter your Surname">
@@ -33,9 +33,9 @@
      <input type="checkbox" id=" Primary Class 3-6" checked>
      <label for="Primary 3-6">Primary 3-6</label><br>
      <input type="checkbox" id="Jss 1-3" checked>
-     <label for="Jss 1-3">Jss 1-3</label><br>
+     <label for="Jss 1-3">Jss 1- ss2</label><br>
      <input type="checkbox" id="SS 1- Adult" checked>
-     <label for="SS 1- Adult">SS 1- Adult</label><br>
+     <label for="SS 3 - Adult">SS 1- Adult</label><br>
      <textarea name="" id="" placeholder="Tell us about yourself" style="resize: none;"></textarea>
 
 
