--- a/form.html
+++ b/form.html
@@ -33,9 +33,9 @@
      <input type="checkbox" id=" Primary Class 3-6" checked>
      <label for="Primary 3-6">Primary 3-6</label><br>
      <input type="checkbox" id="Jss 1-3" checked>
-     <label for="Jss 1-3">Jss 1- ss2</label><br>
-     <input type="checkbox" id="SS 1- Adult" checked>
-     <label for="SS 3 - Adult">SS 1- Adult</label><br>
+     <label for="Jss 1-3">Jss 1- 3</label><br>
+     <input type="checkbox" id="SS - Adult" checked>
+     <label for="SS - Adult">SS - Adult</label><br>
      <textarea name="" id="" placeholder="Tell us about yourself" style="resize: none;"></textarea>
 
 
